fix: add autogenerated code
One of the previous PRs introduced a health check endpoint which was
missing the autogenerated code updates.
