# src/__generated__/swagger.json
@@ -243,6 +243,39 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"process.NodeJS.MemoryUsage": {
+				"properties": {
+					"rss": {
+						"type": "number",
+						"format": "double"
+					},
+					"heapTotal": {
+						"type": "number",
+						"format": "double"
+					},
+					"heapUsed": {
+						"type": "number",
+						"format": "double"
+					},
+					"external": {
+						"type": "number",
+						"format": "double"
+					},
+					"arrayBuffers": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"rss",
+					"heapTotal",
+					"heapUsed",
+					"external",
+					"arrayBuffers"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"HypercertClaimdata": {
 				"description": "Properties of an impact claim",
 				"properties": {
@@ -613,6 +646,8 @@
 					632,
 					633,
 					634,
+					641,
+					642,
 					701,
 					702,
 					801,
@@ -622,13 +657,13 @@
 				],
 				"type": "number"
 			},
-			"Pick__additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.Exclude_keyof_additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.id-or-createdAt-or-invalidated-or-validator_codes__": {
+			"Pick_Order.Exclude_keyofOrder.id-or-createdAt-or-invalidated-or-validator_codes__": {
 				"properties": {},
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit__additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.id-or-createdAt-or-invalidated-or-validator_codes_": {
-				"$ref": "#/components/schemas/Pick__additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.Exclude_keyof_additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.id-or-createdAt-or-invalidated-or-validator_codes__",
+			"Omit_Order.id-or-createdAt-or-invalidated-or-validator_codes_": {
+				"$ref": "#/components/schemas/Pick_Order.Exclude_keyofOrder.id-or-createdAt-or-invalidated-or-validator_codes__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"CreateOrderRequest": {
@@ -1359,6 +1394,47 @@
 				"parameters": []
 			}
 		},
+		"/monitoring/health": {
+			"get": {
+				"operationId": "HealthCheck",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"memory": {
+											"$ref": "#/components/schemas/process.NodeJS.MemoryUsage"
+										},
+										"timestamp": {
+											"type": "number",
+											"format": "double"
+										},
+										"uptime": {
+											"type": "number",
+											"format": "double"
+										},
+										"status": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"memory",
+										"timestamp",
+										"uptime",
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/v1/metadata": {
 			"post": {
 				"operationId": "StoreMetadata",
@@ -1717,7 +1793,7 @@
 												"data": {
 													"properties": {
 														"order": {
-															"$ref": "#/components/schemas/Omit__additionalParameters-string--amounts-number-Array--chainId-number--collection-string--collectionType-number--createdAt-string--currency-string--endTime-number--globalNonce-string--id-string--invalidated-boolean--itemIds-string-Array--orderNonce-string--price-string--quoteType-number--signature-string--signer-string--startTime-number--strategyId-number--subsetNonce-number--validator_codes-number-Array_.id-or-createdAt-or-invalidated-or-validator_codes_"
+															"$ref": "#/components/schemas/Omit_Order.id-or-createdAt-or-invalidated-or-validator_codes_"
 														},
 														"validatorCodes": {
 															"items": {
